--- a/Draw/ZhaJinHua/View/ZJHSettingView.xib
+++ b/Draw/ZhaJinHua/View/ZJHSettingView.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
 		<int key="IBDocument.SystemTarget">1536</int>
-		<string key="IBDocument.SystemVersion">12A269</string>
+		<string key="IBDocument.SystemVersion">11E53</string>
 		<string key="IBDocument.InterfaceBuilderVersion">2840</string>
-		<string key="IBDocument.AppKitVersion">1187</string>
-		<string key="IBDocument.HIToolboxVersion">624.00</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">1926</string>
@@ -41,7 +41,6 @@
 						<int key="NSvFlags">274</int>
 						<string key="NSFrameSize">{320, 480}</string>
 						<reference key="NSSuperview" ref="924395211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="100400245"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSColor" key="IBUIBackgroundColor" id="117131454">
@@ -60,7 +59,6 @@
 								<int key="NSvFlags">274</int>
 								<string key="NSFrame">{{0, 12}, {234, 137}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="740675348"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<object class="NSColor" key="IBUIBackgroundColor" id="356567133">
@@ -75,7 +73,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1069732023"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -117,7 +114,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{91, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1000951452"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -140,7 +136,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 89}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="835119716"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -156,7 +151,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{23, 35}, {40, 37}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="62217588"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -172,8 +166,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 93}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -201,7 +193,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{147, 39}, {57, 29}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="74523642"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -224,7 +215,6 @@
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{220, 0}, {27, 27}}</string>
 								<reference key="NSSuperview" ref="100400245"/>
-								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1048695024"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -245,7 +235,6 @@
 						</array>
 						<string key="NSFrame">{{37, 132}, {247, 157}}</string>
 						<reference key="NSSuperview" ref="924395211"/>
-						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="55846250"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<reference key="IBUIBackgroundColor" ref="356567133"/>
@@ -255,7 +244,6 @@
 				</array>
 				<string key="NSFrameSize">{320, 480}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="1058522842"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<reference key="IBUIBackgroundColor" ref="356567133"/>
