--- a/Draw/ZhaJinHua/Controller/ZJHGameController.xib
+++ b/Draw/ZhaJinHua/Controller/ZJHGameController.xib
@@ -125,6 +125,10 @@
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MC41AA</bytes>
 						</object>
+						<object class="NSCustomResource" key="IBUINormalImage">
+							<string key="NSClassName">NSImage</string>
+							<string key="NSResourceName">zjh_runaway@2x.png</string>
+						</object>
 						<object class="IBUIFontDescription" key="IBUIFontDescription" id="670079205">
 							<int key="type">2</int>
 							<double key="pointSize">15</double>
@@ -1534,6 +1538,7 @@
 			<string key="zjh_game_total_bet_bg@2x.png">{329, 43}</string>
 			<string key="zjh_money_tree@2x.png">{79, 81}</string>
 			<string key="zjh_raise_bet@2x.png">{98, 60}</string>
+			<string key="zjh_runaway@2x.png">{72, 72}</string>
 			<string key="zjh_user_bet_bg@2x.png">{100, 34}</string>
 			<string key="zjh_vs.png">{46, 37}</string>
 		</dictionary>
